--- a/tfgApp/nbproject/project.properties
+++ b/tfgApp/nbproject/project.properties
@@ -28,6 +28,20 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-codec-1.12.jar=lib\\commons-codec-1.12.jar
+file.reference.failureaccess-1.0.1.jar=lib\\failureaccess-1.0.1.jar
+file.reference.guava-27.1-jre.jar=lib\\guava-27.1-jre.jar
+file.reference.jackson-annotations-2.10.1.jar=lib\\jackson-annotations-2.10.1.jar
+file.reference.jackson-core-2.10.1.jar=lib\\jackson-core-2.10.1.jar
+file.reference.jackson-databind-2.10.1.jar=lib\\jackson-databind-2.10.1.jar
+file.reference.java-jwt-3.9.0.jar=lib\\java-jwt-3.9.0.jar
+file.reference.jjwt-api-0.11.1.jar=lib\\jjwt-api-0.11.1.jar
+file.reference.jjwt-impl-0.11.0.jar=lib\\jjwt-impl-0.11.0.jar
+file.reference.jjwt-jackson-0.11.1.jar=lib\\jjwt-jackson-0.11.1.jar
+file.reference.jsoup-1.14.3.jar=lib\\jsoup-1.14.3.jar
+file.reference.jwks-rsa-0.9.0.jar=lib\\jwks-rsa-0.9.0.jar
+file.reference.mysql-connector-java-5.1.13-bin.jar=lib\\mysql-connector-java-5.1.13-bin.jar
+file.reference.tomcat-jwt-security-3.0.0.jar=lib\\tomcat-jwt-security-3.0.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -36,7 +50,24 @@ j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-spdy.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.restlib.classpath}:\
+    ${libs.jaxws21.classpath}:\
+    ${file.reference.commons-codec-1.12.jar}:\
+    ${file.reference.failureaccess-1.0.1.jar}:\
+    ${file.reference.guava-27.1-jre.jar}:\
+    ${file.reference.jackson-annotations-2.10.1.jar}:\
+    ${file.reference.jackson-core-2.10.1.jar}:\
+    ${file.reference.jackson-databind-2.10.1.jar}:\
+    ${file.reference.java-jwt-3.9.0.jar}:\
+    ${file.reference.jjwt-api-0.11.1.jar}:\
+    ${file.reference.jjwt-impl-0.11.0.jar}:\
+    ${file.reference.jjwt-jackson-0.11.1.jar}:\
+    ${file.reference.jsoup-1.14.3.jar}:\
+    ${file.reference.jwks-rsa-0.9.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
+    ${file.reference.tomcat-jwt-security-3.0.0.jar}:\
+    ${libs.restapi.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
