--- a/tfgApp/ApiRest_TFG/conf/application.conf
+++ b/tfgApp/ApiRest_TFG/conf/application.conf
@@ -3,8 +3,8 @@
 
 
 
-db.default.url="jdbc:mysql://localhost:3306/tfg"
-db.default.username=root
-db.default.password="root"
+db.default.url="jdbc:mysql://mysql8:3306/tfg"
+db.default.username=tfg
+db.default.password="tfg_pass"
 db.default.jndiName=DefaultDS
 db.default.driver=com.mysql.jdbc.Driver
