--- a/tfgApp/ApiRest_TFG/conf/application.conf
+++ b/tfgApp/ApiRest_TFG/conf/application.conf
@@ -4,7 +4,7 @@
 
 
 db.default.url="jdbc:mysql://mysql8:3306/tfg"
-db.default.username=tfg
-db.default.password="tfg_pass"
+db.default.username="root"
+db.default.password="1234"
 db.default.jndiName=DefaultDS
 db.default.driver=com.mysql.jdbc.Driver
