--- a/tfgApp/ApiRest_TFG/conf/application.conf
+++ b/tfgApp/ApiRest_TFG/conf/application.conf
@@ -3,7 +3,7 @@
 
 
 
-db.default.url="jdbc:mysql://mysql8:3306/tfg"
+db.default.url="jdbc:mysql://172.18.0.22:3306/tfg"
 db.default.username="root"
 db.default.password="1234"
 db.default.jndiName=DefaultDS
